agregando cambios rama 2

--- a/ejercicios.html
+++ b/ejercicios.html
@@ -5,40 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicios con Git</title>
     <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #f8f8f8;
-            color: #333;
-        }
-
-        h1 {
-            color: #0066cc;
-        }
-
-        p {
-            margin-bottom: 20px;
-        }
-
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        li {
-            margin-bottom: 10px;
-        }
-
-        a {
-            color: #0066cc;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
     </style>
 </head>
 <body>
@@ -53,11 +19,15 @@
         <!-- Agrega más ejercicios según sea necesario -->
     </ul>
 
+    <!-- Cambio conflictivo 1 en la Rama 2 -->
     <h2 id="ejercicio1">Ejercicio 1: Clonar un Repositorio</h2>
-    <p>Descripción del ejercicio 1. Proporciona instrucciones detalladas sobre lo que se espera que los estudiantes hagan en este ejercicio.</p>
+    <p>Descripción del ejercicio 1. Realiza cambios conflictivos específicos en esta descripción desde la Rama 2.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda autem, ad eveniet aliquam aperiam maxime tenetur rerum fugiat? Voluptates incidunt consequuntur quia quis quod? Suscipit tempora at nam adipisci illo!</p>
 
+    <!-- Cambio conflictivo 2 en la Rama 2 -->
     <h2 id="ejercicio2">Ejercicio 2: Crear y Cambiar Ramas</h2>
-    <p>Descripción del ejercicio 2. Proporciona instrucciones detalladas sobre lo que se espera que los estudiantes hagan en este ejercicio.</p>
+    <p>Descripción del ejercicio 2. Realiza cambios conflictivos específicos en esta descripción desde la Rama 2.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic rem quos qui magni, amet officia error consectetur dignissimos at aliquam accusantium iusto, voluptatibus itaque dolore ad expedita quasi ut quibusdam.</p>
 
     <!-- Agrega más ejercicios según sea necesario -->
 
